Fix spacing and added ability to add classNames to dash template

--- a/src/components/views/LoginView/styles/index.scss
+++ b/src/components/views/LoginView/styles/index.scss
@@ -1,6 +1,6 @@
 @import '~/src/styles/newIndex.scss';
 
-.dashboard-template .dashboard-content-container {
+.login-view .dashboard-content-container {
   padding: 2rem 1rem;
 
   .form-footer {
